--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h2>Tammy Sweierczynski</h2>
         <p>Wife. Mother. Grandmother. Sister. Aunt. Student.</p>
         <ul>
-            <li>Beading</li>
+            <li>Family</li>
             <li>Dogs<li>
-            <li>Sports</li>
+            <li>Beading</li>
         </ul>
     </div>
 </body>
