--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Wife. Mother. Grandmother. Sister. Aunt. Student.</p>
         <ul>
             <li>Family</li>
-            <li>Dogs<li>
+            <li>Dogs</li>
             <li>Beading</li>
         </ul>
     </div>
