--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="display: flex; justify-content: center; align-items: center; height: 100vh; width: 100vw; background-color: lightgrey;">
     <div style="height: 40%; background-color: white; padding: 30px; border: 3px solid black; border-radius: 15px;">
-        <h2>Tammy Sweierczynski</h2>
+        <h2>Tammy Swierczynski</h2>
         <p>Wife. Mother. Grandmother. Sister. Aunt. Student.</p>
         <ul>
             <li>Family</li>
